--- a/Mics/SimpleIoC/SimpleIoC.csproj
+++ b/Mics/SimpleIoC/SimpleIoC.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FB0E056B-11BC-4E2A-92C9-040299C9E482}</ProjectGuid>
+    <ProjectGuid>{6DB2E457-1FAF-4A91-8074-7242DFB80EA3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ViewModel</RootNamespace>
-    <AssemblyName>ViewModel</AssemblyName>
+    <RootNamespace>SimpleIoC</RootNamespace>
+    <AssemblyName>SimpleIoC</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,34 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command\Commander.cs" />
-    <Compile Include="Command\IDialogOpenner.cs" />
-    <Compile Include="Command\OpenFileDialogCommand.cs" />
+    <Compile Include="DIContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MicsViewModel.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{4dff3f86-8c67-45b9-a8f9-629567e9b725}</Project>
-      <Name>Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SimpleIoC\SimpleIoC.csproj">
-      <Project>{6db2e457-1faf-4a91-8074-7242dfb80ea3}</Project>
-      <Name>SimpleIoC</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
